<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondButtonColor"
    tools:context=".ViewTasksActivity">

    <ScrollView
        android:id="@+id/scrollview_tasks"
        android:layout_width="410dp"
        android:layout_height="483dp"
        android:layout_marginBottom="52dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearlayout_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <SearchView
        android:id="@+id/searchTasks"
        android:layout_width="387dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="59dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/scrollview_tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>