...
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:cornerRadius="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash"
        app:layout_constraintVertical_bias="0.905" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="275dp"
        android:layout_height="67dp"
        android:background="#215CF3"
        android:backgroundTint="#44C086"
        android:fontFamily="@font/questrial"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#FFFAE3"
        android:textSize="24sp"
        app:cornerRadius="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
